# zephyr-example-app

./: .gitignore  README.md  west_setup.sh
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
mw-test-application/: .clang-format  README.md  west.yml
mw-test-application/.github/workflows/: build.yml
mw-test-application/app/: CMakeLists.txt  Kconfig  prj.conf  prj_debug.conf  prj_native.conf  sample.yaml
mw-test-application/app/boards/: native_sim.conf  native_sim.overlay  nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay  nucleo_f401re.overlay
mw-test-application/app/src/: main.c
mw-test-application/app/src/common/: CMakeLists.txt  zbus_channels.c  zbus_channels.h
mw-test-application/app/src/include/: messages.h
mw-test-application/app/src/modules/button/: CMakeLists.txt  Kconfig.button  button_thread.c
mw-test-application/app/src/modules/led/: CMakeLists.txt  Kconfig.led  led_thread.c
mw-test-application/app/src/modules/uart/: CMakeLists.txt  Kconfig.uart  uart_thread.c
mw-test-application/app/src/threads/: CMakeLists.txt  button_thread.c  button_thread.h  led_thread.c  led_thread.h  uart_thread.c  uart_thread.h
mw-test-application/scripts/: build_and_flash.py  flash.sh
mw-test-application/tests/app/button_thread/: CMakeLists.txt  prj.conf  testcase.yaml
mw-test-application/tests/app/button_thread/src/: test_button_thread.c
mw-test-application/tests/app/led_thread/: CMakeLists.txt  native_sim.overlay  prj.conf  testcase.yaml
mw-test-application/tests/app/led_thread/src/: test_led_thread.c
mw-test-application/tests/app/uart_thread/: CMakeLists.txt  Kconfig  native_sim.overlay  prj.conf  testcase.yaml
mw-test-application/tests/app/uart_thread/src/: test_uart_thread.c
